Add tests for customers, items, invoice items

--- a/test/fixtures/invoices.yml
+++ b/test/fixtures/invoices.yml
@@ -2,15 +2,15 @@
 
 one:
   status: shipped
-  merchant_id: 1
-  customer_id: 1
+  merchant_id: 113629430
+  customer_id: 298486374
 
 two:
   status: shipped
-  merchant_id: 1
-  customer_id: 2
+  merchant_id: 113629430
+  customer_id: 980190962
 
 three:
   status: shipped
-  merchant_id: 2
-  customer_id: 2
+  merchant_id: 980190962
+  customer_id: 980190962
