--- a/test/fixtures/transactions.yml
+++ b/test/fixtures/transactions.yml
@@ -3,14 +3,14 @@
 one:
   credit_card_number: 523423425235
   result: success
-  invoice_id: 1
+  invoice_id: 980190962
 
 two:
   credit_card_number: 234092342093
   result: success
-  invoice_id: 2
+  invoice_id: 298486374
 
 three:
   credit_card_number: 234092342093
   result: success
-  invoice_id: 3
+  invoice_id: 113629430
