--- a/test/fixtures/invoices.yml
+++ b/test/fixtures/invoices.yml
@@ -20,3 +20,11 @@ three:
   customer_id: 980190962
   created_at: 2015-03-13T06:54:11.000Z
   updated_at: 2015-03-13T06:54:11.000Z
+
+four:
+  status: shipped
+  merchant_id: 980190962
+  customer_id: 298486374
+  created_at: 2014-03-13T06:54:11.000Z
+  updated_at: 2014-03-13T06:54:11.000Z
+
